[tool.poetry]
name = "netphos-web"
version = "0.1.0"
description = ""
authors = ["Toan Phung <toan.phungkhoiquoctoan@gmail.com>"]
readme = "README.md"
packages = [{include = "netphos_web"}]

[tool.poetry.dependencies]
python = "^3.9"
tornado = "^6.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

